PA2/src/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error '}' ':'
    7      | TYPEID

    8 formal: OBJECTID ':' TYPEID

    9 formal_list: dummy_formal_list
   10            | normal_formal_list

   11 dummy_formal_list: %empty

   12 normal_formal_list: formal ',' normal_formal_list
   13                   | formal

   14 feature_list: dummy_feature_list
   15             | normal_feature_list

   16 dummy_feature_list: %empty

   17 normal_feature_list: feature normal_feature_list
   18                    | feature

   19 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   20        | OBJECTID ':' TYPEID ASSIGN expression ';'
   21        | OBJECTID ':' TYPEID ';'
   22        | error ';'

   23 expression_list: dummy_expression_list
   24                | normal_experssion_list

   25 dummy_expression_list: %empty

   26 normal_experssion_list: expression ',' normal_experssion_list
   27                       | expression

   28 expression_list_: dummy_expression_list_
   29                 | normal_experssion_list_

   30 dummy_expression_list_: %empty

   31 normal_experssion_list_: expression ';' normal_experssion_list_
   32                        | expression ';'
   33                        | error ';' normal_experssion_list_

   34 inlet: %empty
   35      | ASSIGN expression

   36 let_: OBJECTID ':' TYPEID inlet IN expression
   37     | OBJECTID ':' TYPEID inlet ',' let_
   38     | error ',' let_

   39 case: OBJECTID ':' TYPEID DARROW expression

   40 case_list: case ';'
   41          | case ';' case_list

   42 expression: OBJECTID ASSIGN expression
   43           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression '.' OBJECTID '(' expression_list ')'
   45           | OBJECTID '(' expression_list ')'
   46           | IF expression THEN expression ELSE expression FI
   47           | WHILE expression LOOP expression POOL
   48           | '{' expression_list_ '}'
   49           | LET let_
   50           | CASE expression OF case_list ESAC
   51           | NEW TYPEID
   52           | ISVOID expression
   53           | expression '+' expression
   54           | expression '-' expression
   55           | expression '*' expression
   56           | expression '/' expression
   57           | '~' expression
   58           | expression '<' expression
   59           | expression LE expression
   60           | expression '=' expression
   61           | NOT expression
   62           | '(' expression ')'
   63           | OBJECTID
   64           | INT_CONST
   65           | STR_CONST
   66           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 19 43 44 45 62
    ')' (41) 19 43 44 45 62
    '*' (42) 55
    '+' (43) 53
    ',' (44) 12 26 37 38
    '-' (45) 54
    '.' (46) 43 44
    '/' (47) 56
    ':' (58) 6 8 19 20 21 36 37 39
    ';' (59) 4 5 19 20 21 22 31 32 33 40 41
    '<' (60) 58
    '=' (61) 60
    '@' (64) 43
    '{' (123) 4 5 19 48
    '}' (125) 4 5 6 19 48
    '~' (126) 57
    error (256) 6 22 33 38
    CLASS (258) 4 5
    ELSE (259) 46
    FI (260) 46
    IF (261) 46
    IN (262) 36
    INHERITS (263) 5
    LET (264) 49
    LOOP (265) 47
    POOL (266) 47
    THEN (267) 46
    WHILE (268) 47
    CASE (269) 50
    ESAC (270) 50
    OF (271) 50
    DARROW (272) 39
    NEW (273) 51
    ISVOID (274) 52
    STR_CONST <symbol> (275) 65
    INT_CONST <symbol> (276) 64
    BOOL_CONST <boolean> (277) 66
    TYPEID <symbol> (278) 4 5 7 8 19 20 21 36 37 39 43 51
    OBJECTID <symbol> (279) 8 19 20 21 36 37 39 42 43 44 45 63
    ASSIGN (280) 20 35 42
    NOT (281) 61
    LE (282) 59
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6 7
        on right: 2 3
    formal <formal> (49)
        on left: 8
        on right: 12 13
    formal_list <formals> (50)
        on left: 9 10
        on right: 19
    dummy_formal_list <formals> (51)
        on left: 11
        on right: 9
    normal_formal_list <formals> (52)
        on left: 12 13
        on right: 10 12
    feature_list <features> (53)
        on left: 14 15
        on right: 4 5
    dummy_feature_list <features> (54)
        on left: 16
        on right: 14
    normal_feature_list <features> (55)
        on left: 17 18
        on right: 15 17
    feature <feature> (56)
        on left: 19 20 21 22
        on right: 17 18
    expression_list <expressions> (57)
        on left: 23 24
        on right: 43 44 45
    dummy_expression_list <expressions> (58)
        on left: 25
        on right: 23
    normal_experssion_list <expressions> (59)
        on left: 26 27
        on right: 24 26
    expression_list_ <expressions> (60)
        on left: 28 29
        on right: 48
    dummy_expression_list_ <expressions> (61)
        on left: 30
        on right: 28
    normal_experssion_list_ <expressions> (62)
        on left: 31 32 33
        on right: 29 31 33
    inlet <expression> (63)
        on left: 34 35
        on right: 36 37
    let_ <expression> (64)
        on left: 36 37 38
        on right: 37 38 49
    case <case_> (65)
        on left: 39
        on right: 40 41
    case_list <cases> (66)
        on left: 40 41
        on right: 41 50
    expression <expression> (67)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 19 20 26 27 31 32 35 36 39 42 43 44 46 47 50 52 53 54 55 56 57 58 59 60 61 62


State 0

    0 $accept: • program $end

    error   shift, and go to state 1
    CLASS   shift, and go to state 2
    TYPEID  shift, and go to state 3

    program     go to state 4
    class_list  go to state 5
    class       go to state 6


State 1

    6 class: error • '}' ':'

    '}'  shift, and go to state 7


State 2

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 8


State 3

    7 class: TYPEID •

    $default  reduce using rule 7 (class)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 9


State 5

    1 program: class_list •
    3 class_list: class_list • class

    error   shift, and go to state 1
    CLASS   shift, and go to state 2
    TYPEID  shift, and go to state 3

    $end  reduce using rule 1 (program)

    class  go to state 10


State 6

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 7

    6 class: error '}' • ':'

    ':'  shift, and go to state 11


State 8

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 12
    '{'       shift, and go to state 13


State 9

    0 $accept: program $end •

    $default  accept


State 10

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 11

    6 class: error '}' ':' •

    $default  reduce using rule 6 (class)


State 12

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 16 (dummy_feature_list)

    feature_list         go to state 17
    dummy_feature_list   go to state 18
    normal_feature_list  go to state 19
    feature              go to state 20


State 14

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 21


State 15

   22 feature: error • ';'

    ';'  shift, and go to state 22


State 16

   19 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   20        | OBJECTID • ':' TYPEID ASSIGN expression ';'
   21        | OBJECTID • ':' TYPEID ';'

    ':'  shift, and go to state 23
    '('  shift, and go to state 24


State 17

    4 class: CLASS TYPEID '{' feature_list • '}' ';'

    '}'  shift, and go to state 25


State 18

   14 feature_list: dummy_feature_list •

    $default  reduce using rule 14 (feature_list)


State 19

   15 feature_list: normal_feature_list •

    $default  reduce using rule 15 (feature_list)


State 20

   17 normal_feature_list: feature • normal_feature_list
   18                    | feature •

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 18 (normal_feature_list)

    normal_feature_list  go to state 26
    feature              go to state 20


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 16 (dummy_feature_list)

    feature_list         go to state 27
    dummy_feature_list   go to state 18
    normal_feature_list  go to state 19
    feature              go to state 20


State 22

   22 feature: error ';' •

    $default  reduce using rule 22 (feature)


State 23

   20 feature: OBJECTID ':' • TYPEID ASSIGN expression ';'
   21        | OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 28


State 24

   19 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 29

    $default  reduce using rule 11 (dummy_formal_list)

    formal              go to state 30
    formal_list         go to state 31
    dummy_formal_list   go to state 32
    normal_formal_list  go to state 33


State 25

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 34


State 26

   17 normal_feature_list: feature normal_feature_list •

    $default  reduce using rule 17 (normal_feature_list)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'

    '}'  shift, and go to state 35


State 28

   20 feature: OBJECTID ':' TYPEID • ASSIGN expression ';'
   21        | OBJECTID ':' TYPEID • ';'

    ASSIGN  shift, and go to state 36
    ';'     shift, and go to state 37


State 29

    8 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 38


State 30

   12 normal_formal_list: formal • ',' normal_formal_list
   13                   | formal •

    ','  shift, and go to state 39

    $default  reduce using rule 13 (normal_formal_list)


State 31

   19 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 40


State 32

    9 formal_list: dummy_formal_list •

    $default  reduce using rule 9 (formal_list)


State 33

   10 formal_list: normal_formal_list •

    $default  reduce using rule 10 (formal_list)


State 34

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 41


State 36

   20 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 56


State 37

   21 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 21 (feature)


State 38

    8 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 57


State 39

   12 normal_formal_list: formal ',' • normal_formal_list

    OBJECTID  shift, and go to state 29

    formal              go to state 30
    normal_formal_list  go to state 58


State 40

   19 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 59


State 41

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 42

   46 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 60


State 43

   49 expression: LET • let_

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_  go to state 63


State 44

   47 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 64


State 45

   50 expression: CASE • expression OF case_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 65


State 46

   51 expression: NEW • TYPEID

    TYPEID  shift, and go to state 66


State 47

   52 expression: ISVOID • expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 67


State 48

   65 expression: STR_CONST •

    $default  reduce using rule 65 (expression)


State 49

   64 expression: INT_CONST •

    $default  reduce using rule 64 (expression)


State 50

   66 expression: BOOL_CONST •

    $default  reduce using rule 66 (expression)


State 51

   42 expression: OBJECTID • ASSIGN expression
   45           | OBJECTID • '(' expression_list ')'
   63           | OBJECTID •

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 63 (expression)


State 52

   61 expression: NOT • expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 70


State 53

   57 expression: '~' • expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 71


State 54

   48 expression: '{' • expression_list_ '}'

    error       shift, and go to state 72
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    '}'  reduce using rule 30 (dummy_expression_list_)

    expression_list_         go to state 73
    dummy_expression_list_   go to state 74
    normal_experssion_list_  go to state 75
    expression               go to state 76


State 55

   62 expression: '(' • expression ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 77


State 56

   20 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86
    ';'  shift, and go to state 87


State 57

    8 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 8 (formal)


State 58

   12 normal_formal_list: formal ',' normal_formal_list •

    $default  reduce using rule 12 (normal_formal_list)


State 59

   19 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 88


State 60

   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   46           | IF expression • THEN expression ELSE expression FI
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression

    THEN  shift, and go to state 89
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 61

   38 let_: error • ',' let_

    ','  shift, and go to state 90


State 62

   36 let_: OBJECTID • ':' TYPEID inlet IN expression
   37     | OBJECTID • ':' TYPEID inlet ',' let_

    ':'  shift, and go to state 91


State 63

   49 expression: LET let_ •

    $default  reduce using rule 49 (expression)


State 64

   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   47           | WHILE expression • LOOP expression POOL
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression

    LOOP  shift, and go to state 92
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 65

   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   50           | CASE expression • OF case_list ESAC
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression

    OF   shift, and go to state 93
    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86


State 66

   51 expression: NEW TYPEID •

    $default  reduce using rule 51 (expression)


State 67

   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   52           | ISVOID expression •
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 52 (expression)


State 68

   42 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expression  go to state 94


State 69

   45 expression: OBJECTID '(' • expression_list ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    $default  reduce using rule 25 (dummy_expression_list)

    expression_list         go to state 95
    dummy_expression_list   go to state 96
    normal_experssion_list  go to state 97
    expression              go to state 98


State 70

   43 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   44           | expression • '.' OBJECTID '(' expression_list ')'
   53           | expression • '+' expression
   54           | expression • '-' expression
   55           | expression • '*' expression
   56           | expression • '/' expression
   58           | expression • '<' expression
   59           | expression • LE expression
   60           | expression • '=' expression
   61           | NOT expression •

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 61 (expression)


State 71
